# Pelageia-Immersive

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  main.cpp
Assets/TileMap/: map.tmx
Config/: Engine.xml
Core/: Engine.cpp  Engine.h  Game.cpp  Game.h
Core/Animation/: Animation.cpp  Animation.h
Core/Camera/: Camera.cpp  Camera.h
Core/Characters/: Character.h  Player.cpp  Player.h
Core/Collisions/: CollisionHandler.cpp  CollisionHandler.h
Core/Config/: ConfigLoader.cpp  ConfigLoader.h
Core/Entities/: Actor.cpp  Actor.h  Pawn.cpp  Pawn.h
Core/Graphics/: Graphics.cpp  Graphics.h  Image.cpp  Image.h  TextureManager.cpp  TextureManager.h
Core/Include/Pugi/: CMakeLists.txt  pugixml.cpp  pugixml.hpp
Core/Input/: Input.cpp  Input.h  InputHandler.cpp  InputHandler.h
Core/Inputs/: Input.cpp
Core/Logger/: PeImLogger.cpp  PeImLogger.h
Core/Map/: GameMap.h  Layer.h  MapParser.cpp  MapParser.h  TileLayer.cpp  TileLayer.h
Core/Objects/: GameObject.h
Core/Physics/: Collider.cpp  Collider.h  RigidBody.h  Transform.h  Vector2D.h
Core/Timer/: Timer.cpp  Timer.h
Core/Utils/: ConfigLoader.cpp  ConfigLoader.h  Parser.cpp  Parser.h
Core/Utils/Config/: CMakeLists.txt  ConfigLoader.cpp  ConfigLoader.h
Core/Utils/ConfigLoader/: ConfigLoader.cpp  ConfigLoader.h
Core/Utils/Logger/: PeImLogger.cpp  PeImLogger.h
Core/Utils/Parser/: TryParse.cpp  TryParse.h
Private/: Engine.cpp
Private/Animation/: Animation.cpp  SeqAnimation.cpp  SpriteAnimation.cpp
Private/Camera/: Camera.cpp
Private/Characters/: Character.cpp  Player.cpp
Private/Collisions/: CollisionHandler.cpp
Private/Graphics/: ShadowManager.cpp  TextureManager.cpp
Private/Inputs/: Input.cpp
Private/Map/: MapParser.cpp  TileLayer.cpp  TileMapParser.cpp
Private/Physics/: Collider.cpp
Private/Timer/: Timer.cpp
Private/Utils/Config/: ConfigLoader.cpp
Public/: Engine.h
Public/Animation/: Animation.h  SeqAnimation.h  SpriteAnimation.h
Public/Camera/: Camera.h
Public/Characters/: Character.h  Player.h
Public/Collisions/: CollisionHandler.h
Public/Graphics/: ShadowManager.h  TextureManager.h
Public/Inputs/: Input.h
Public/Map/: EntitiesLayer.h  GameMap.h  Layer.h  MapParser.h  TileLayer.h  TileMapParser.h
Public/Objects/: GameObject.h  IObject.h  Utils.h
Public/Physics/: Collider.h  RigidBody.h  Transform.h  Vector2D.h
Public/Timer/: Timer.h
Public/Utils/Calculations/: Coordinates.h
Public/Utils/Config/: ConfigLoader.h
SDL2/docs/: README-android.md  README-cmake.md  doxyfile
SDL2/i686-w64-mingw32/include/SDL2/: SDL_assert.h  SDL_audio.h  SDL_config.h  SDL_cpuinfo.h  SDL_events.h  SDL_filesystem.h  SDL_gamecontroller.h  SDL_hidapi.h  SDL_hints.h  SDL_joystick.h  SDL_keyboard.h  SDL_locale.h  SDL_mouse.h  SDL_quit.h  SDL_rwops.h  SDL_sensor.h  SDL_syswm.h  SDL_test_fuzzer.h  SDL_test_harness.h  SDL_test_images.h  SDL_test_md5.h  SDL_test_random.h  SDL_timer.h  SDL_touch.h
SDL2/test/: CMakeLists.txt  testautomation_audio.c  testautomation_math.c  testautomation_rect.c  testautomation_video.c  testgl2.c  testgles.c  testgles2.c  testgles2_sdf.c  testlock.c  testnative.h  testplatform.c  testshader.c
SDL2/x86_64-w64-mingw32/include/SDL2/: SDL_audio.h  SDL_endian.h  SDL_events.h  SDL_gamecontroller.h  SDL_gesture.h  SDL_guid.h  SDL_haptic.h  SDL_hidapi.h  SDL_hints.h  SDL_image.h  SDL_locale.h  SDL_messagebox.h  SDL_misc.h  SDL_mouse.h  SDL_mutex.h  SDL_opengl.h  SDL_power.h  SDL_render.h  SDL_rwops.h  SDL_surface.h  SDL_system.h  SDL_syswm.h  SDL_test_common.h  SDL_test_log.h  SDL_test_random.h
SDL2/x86_64-w64-mingw32/lib/cmake/SDL2_image/: sdl2_image-config.cmake
SDL2IMAGE/cmake/: sdl2_image-config-version.cmake  sdl2_image-config.cmake
cmake/modules/: FindSDL2.cmake
include/: Engine.h
include/components/: BaseComponent.h
include/components/animation/: AnimationComponent.h  SpriteAnimationComponent.h
include/components/camera/: CameraComponent.h
include/components/physics/: ColliderComponent.h  RigidBodyComponent.h  TransformComponent.h
include/components/scene/: BaseLayer.h  CharacterLayer.h  CollisionLayer.h  DecorationLayer.h  EffectLayer.h  EntitiesLayerComponent.h  EventLayer.h  LayerComponent.h  ObjectLayer.h  OverlayLayer.h  TileLayer.h  TileLayerComponent.h  TileMapLayerComponent.h
include/components/sprite/: SpriteComponent.h
include/entities/: Entity.h
include/entities/characters/: CharacterEntity.h  PlayerEntity.h
include/entities/scene/: GameMapEntity.h  Scene.h
include/mathematics/: IsometricConverter.h  IsometricConvertor.h  Vector2D.h
include/systems/: BaseSystem.h
include/systems/configuration/: ConfigurationSystem.h
include/systems/graphics/: TextureManagerSystem.h
include/systems/input/: InputSystem.h
include/systems/scene/: LayerFactory.h  SceneParserSystem.h  SceneSystem.h
include/utilities/: CoreTypeEnums.h  CoreTypeStructs.h
src/: Engine.cpp
src/components/scene/: BaseLayer.cpp  CharacterLayer.cpp  CollisionLayer.cpp  DecorationLayer.cpp  EffectLayer.cpp  EventLayer.cpp  ObjectLayer.cpp  OverlayLayer.cpp  TileLayer.cpp  TileMapLayerComponent.cpp
src/components/sprite/: SpriteComponent.h
src/entities/scene/: Scene.cpp
src/systems/configuration/: ConfigurationSystem.cpp
src/systems/graphics/: TextureManagerSystem.cpp
src/systems/input/: InputSystem.cpp
src/systems/scene/: LayerFactory.cpp  SceneParserSystem.cpp  SceneSystem.cpp
